--- a/curso_em_vídeo/html_css/module_1/ex-001/index.html
+++ b/curso_em_vídeo/html_css/module_1/ex-001/index.html
@@ -9,8 +9,13 @@
 
 <body>
     <h1>Hello, World!</h1>
-    <hr>
+    
+    <br>
+
     <p>This is my first HTML document :)</p>
+
+    <a href="../../module_1/">Back</a>
+
 </body>
 
 </html>
