--- a/curso_em_vídeo/html_css/module_1/ex-002/index.html
+++ b/curso_em_vídeo/html_css/module_1/ex-002/index.html
@@ -9,13 +9,18 @@
 
 <body>
     <h1>Paragraph and Breakroll</h1>
-    <hr>
+    
+    <br>
+
     <p>
         You can write a paragraph any way you want. Just put your text between the tags &lt;p&gt; and &lt;/p&gt;.
     </p>
     <p>
         To wrap your text use the &lt;br&gt; tag.
     </p>
+
+    <a href="../../module_1/">Back</a>
+
 </body>
 
 </html>
