--- a/curso_em_vídeo/html_css/module_1/ex-005/index.html
+++ b/curso_em_vídeo/html_css/module_1/ex-005/index.html
@@ -15,8 +15,12 @@
 </head>
 
 <body>
+    
     <h1>Insert favicon :)</h1>
     <p>See the image tab.</p>
+
+    <a href="../../module_1/">Back</a>
+
 </body>
 
 </html>
