--- a/curso_em_vídeo/html_css/module_1/ex-003/index.html
+++ b/curso_em_vídeo/html_css/module_1/ex-003/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <p>
         See below for some special symbols:
     </p>
@@ -22,7 +23,9 @@
         &delta;
         &uarr;
     </p>
+
     <br>
+
     <p>
         Now some emojis:
     </p>
@@ -31,6 +34,7 @@
         https://emojipedia.org/
         The formula to insert emojis is: "&#x" + {Emojipedia code}
     -->
+    
     <p>
         &#x1F600;
         &#x1F31E;
@@ -38,6 +42,9 @@
         &#x1F480;
         &#x1F916;
     </p>
+
+    <a href="../../module_1/">Back</a>
+
 </body>
 
 </html>
