--- a/curso_em_vídeo/html_css/module_1/ex-006/index.html
+++ b/curso_em_vídeo/html_css/module_1/ex-006/index.html
@@ -16,14 +16,21 @@
     <h1>Main Title Level 1</h1>
     <h2>Subtitle Level 2</h2>
     <h3>Subtitle Level 3</h3>
+    
     <hr>
+
     <h1>Main Title Level 1</h1>
     <h2>Subtitle Level 2</h2>
     <h3>Subtitle Level 3</h3>
+
     <hr>
+
     <h1>Main Title Level 1</h1>
     <h2>Subtitle Level 2</h2>
     <h3>Subtitle Level 3</h3>
+
     <hr>
+
+    <a href="../../module_1/">Back</a>
 
 </html>
