--- a/curso_em_vídeo/html_css/module_2/ex-002/index.html
+++ b/curso_em_vídeo/html_css/module_2/ex-002/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing Gradient</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    
-    
+    <!--
+        Look CSS File "style.css"
+    -->
+
+    <div id="n1"></div>
+    <div id="n2"></div>
+
+    <a href="../../module_2/">Back</a>
+
 </body>
+
 </html>
