--- a/curso_em_vídeo/html_css/module_2/ex-009/index.html
+++ b/curso_em_vídeo/html_css/module_2/ex-009/index.html
@@ -32,5 +32,8 @@
 
     <h3 class="title7">Lorem</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos reiciendis commodi iusto, dolorum, ex necessitatibus at alias modi dolores dolore harum labore quia nisi natus inventore vitae enim officiis blanditiis.</p>
+
+    <a href="../../module_2/">Back</a>
+
 </body>
 </html>
