--- a/curso_em_vídeo/html_css/module_2/ex-013/index.html
+++ b/curso_em_vídeo/html_css/module_2/ex-013/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-    <h1>Hello, World!</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Box Model</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-    <br>
-
-    <a href="../../module_2/">Back</a>
-
-</body>
+    <body>
+        <h1>Hello, World!</h1>
+        <br />
+        <a href="../../module_2/">Back</a>
+    </body>
 </html>
