--- a/curso_em_vídeo/html_css/module_2/ex-014/index.html
+++ b/curso_em_vídeo/html_css/module_2/ex-014/index.html
@@ -23,7 +23,9 @@
                 2 | 2px 2px | Up down, right left.
                 4 | 2px 1px 1px 2px | Up, right, down, left.
 
-                outline, border,
+                outline, border:
+
+                `name: 1px solid color;`
             -->
             
         </p>
