--- a/curso_em_vídeo/html_css/module_2/ex-016 - Final Project Module/index.html
+++ b/curso_em_vídeo/html_css/module_2/ex-016 - Final Project Module/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
-        <title>KCUF NEWS | Final Project Module</title>
+        <title>KCUF NEWS</title>
     </head>
     <body>
         <header>
