--- a/curso_em_vídeo/html_css/module_3/ex-002/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-002/index.html
@@ -6,4 +6,6 @@
         <link rel="stylesheet" href="style.css" />
         <title>Background Image Repeat</title>
     </head>
+    <br>
+        <a href="../../module_3/">Back</a>
 </html>
