--- a/curso_em_vídeo/html_css/module_3/ex-006/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-006/index.html
@@ -27,5 +27,7 @@
         Magni sint eum ad aut id dolores fuga at sed architecto debitis facilis, tempore inventore corrupti harum. Sequi, eveniet commodi alias distinctio officia ullam eum ipsum eligendi molestiae reiciendis nemo?
         Ducimus quibusdam provident saepe labore modi veniam quasi id soluta nihil fugit autem magnam aut, officia vero distinctio consequuntur temporibus. Nulla repellendus ipsam nisi facilis perspiciatis repellat dolores voluptas quae.</p>
     </main>
+    <br>
+        <a href="../../module_3/">Back</a>
 </body>
 </html>
