--- a/curso_em_vídeo/html_css/module_3/ex-001/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-001/index.html
@@ -10,5 +10,7 @@
     <div class="square" id="s1"></div>
     <div class="square" id="s2"></div>
     <div class="square" id="s3"></div>
+    <br>
+        <a href="../../module_3/">Back</a>
 </body>
 </html>
