--- a/curso_em_vídeo/html_css/module_3/ex-004/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-004/index.html
@@ -7,5 +7,7 @@
         <title>Background Position</title>
     </head>
     <body>
+        <br>
+        <a href="../../module_3/">Back</a>
     </body>
 </html>
