--- a/curso_em_vídeo/html_css/module_3/ex-007/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-007/index.html
@@ -4,21 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Image Position Site Background</title>
+        <title>Vertical Centralization</title>
     </head>
     <body>
-        <div class="bloco" id="q1">
+        <section id="container">
+            <article id="content">
 
-        </div>
-        <div class="bloco" id="q2">
-
-        </div>
-        <div class="bloco" id="q3">
-
-        </div>
-        <div class="bloco" id="q4">
-
-        </div>
+            </article>
+        </section>
         <br>
         <a href="../../module_3/">Back</a>
     </body>
