--- a/curso_em_vídeo/html_css/module_3/ex-011/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-011/index.html
@@ -58,12 +58,14 @@
 
         <!--
 
+
             td - table data
             tr - table row
+            th - table head (for title columns)
 
             Hierarchy
 
-            table > t(bodypart) > tr > td
+            table > t(bodypart) > tr > th/td
 
         -->
 
