--- a/curso_em_vídeo/html_css/module_3/ex-012/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-012/index.html
@@ -8,11 +8,9 @@
         <title>Big Tables + Semantic</title>
     </head>
     <body>
-
         <table>
-
             <caption>
-                Most common words in English 
+                Most common words in English
             </caption>
 
             <thead>
@@ -91,13 +89,286 @@
                     <td class="name">Pronoun</td>
                     <td>7</td>
                 </tr>
+                <tr>
+                    <td>1</td>
+                    <td class="name">the</td>
+                    <td class="name">Article</td>
+                    <td>12</td>
+                </tr>
+
+                <tr>
+                    <td>2</td>
+                    <td class="name">be</td>
+                    <td class="name">Verb</td>
+                    <td>21</td>
+                </tr>
+
+                <tr>
+                    <td>3</td>
+                    <td class="name">to</td>
+                    <td class="name">Preposition</td>
+                    <td>17</td>
+                </tr>
+
+                <tr>
+                    <td>4</td>
+                    <td class="name">of</td>
+                    <td class="name">Preposition</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="name">and</td>
+                    <td class="name">Conjunction</td>
+                    <td>16</td>
+                </tr>
+
+                <tr>
+                    <td>6</td>
+                    <td class="name">a</td>
+                    <td class="name">Article</td>
+                    <td>20</td>
+                </tr>
+
+                <tr>
+                    <td>7</td>
+                    <td class="name">in</td>
+                    <td class="name">Preposition</td>
+                    <td>23</td>
+                </tr>
+
+                <tr>
+                    <td>8</td>
+                    <td class="name">that</td>
+                    <td class="name">Verb</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td class="name">have</td>
+                    <td class="name">Pronoun</td>
+                    <td>25</td>
+                </tr>
+
+                <tr>
+                    <td>10</td>
+                    <td class="name">I</td>
+                    <td class="name">Pronoun</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td class="name">the</td>
+                    <td class="name">Article</td>
+                    <td>12</td>
+                </tr>
+
+                <tr>
+                    <td>2</td>
+                    <td class="name">be</td>
+                    <td class="name">Verb</td>
+                    <td>21</td>
+                </tr>
+
+                <tr>
+                    <td>3</td>
+                    <td class="name">to</td>
+                    <td class="name">Preposition</td>
+                    <td>17</td>
+                </tr>
+
+                <tr>
+                    <td>4</td>
+                    <td class="name">of</td>
+                    <td class="name">Preposition</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="name">and</td>
+                    <td class="name">Conjunction</td>
+                    <td>16</td>
+                </tr>
+
+                <tr>
+                    <td>6</td>
+                    <td class="name">a</td>
+                    <td class="name">Article</td>
+                    <td>20</td>
+                </tr>
+
+                <tr>
+                    <td>7</td>
+                    <td class="name">in</td>
+                    <td class="name">Preposition</td>
+                    <td>23</td>
+                </tr>
+
+                <tr>
+                    <td>8</td>
+                    <td class="name">that</td>
+                    <td class="name">Verb</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td class="name">have</td>
+                    <td class="name">Pronoun</td>
+                    <td>25</td>
+                </tr>
+
+                <tr>
+                    <td>10</td>
+                    <td class="name">I</td>
+                    <td class="name">Pronoun</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td class="name">the</td>
+                    <td class="name">Article</td>
+                    <td>12</td>
+                </tr>
+
+                <tr>
+                    <td>2</td>
+                    <td class="name">be</td>
+                    <td class="name">Verb</td>
+                    <td>21</td>
+                </tr>
+
+                <tr>
+                    <td>3</td>
+                    <td class="name">to</td>
+                    <td class="name">Preposition</td>
+                    <td>17</td>
+                </tr>
+
+                <tr>
+                    <td>4</td>
+                    <td class="name">of</td>
+                    <td class="name">Preposition</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="name">and</td>
+                    <td class="name">Conjunction</td>
+                    <td>16</td>
+                </tr>
+
+                <tr>
+                    <td>6</td>
+                    <td class="name">a</td>
+                    <td class="name">Article</td>
+                    <td>20</td>
+                </tr>
+
+                <tr>
+                    <td>7</td>
+                    <td class="name">in</td>
+                    <td class="name">Preposition</td>
+                    <td>23</td>
+                </tr>
+
+                <tr>
+                    <td>8</td>
+                    <td class="name">that</td>
+                    <td class="name">Verb</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td class="name">have</td>
+                    <td class="name">Pronoun</td>
+                    <td>25</td>
+                </tr>
+
+                <tr>
+                    <td>10</td>
+                    <td class="name">I</td>
+                    <td class="name">Pronoun</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td class="name">the</td>
+                    <td class="name">Article</td>
+                    <td>12</td>
+                </tr>
+
+                <tr>
+                    <td>2</td>
+                    <td class="name">be</td>
+                    <td class="name">Verb</td>
+                    <td>21</td>
+                </tr>
+
+                <tr>
+                    <td>3</td>
+                    <td class="name">to</td>
+                    <td class="name">Preposition</td>
+                    <td>17</td>
+                </tr>
+
+                <tr>
+                    <td>4</td>
+                    <td class="name">of</td>
+                    <td class="name">Preposition</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="name">and</td>
+                    <td class="name">Conjunction</td>
+                    <td>16</td>
+                </tr>
+
+                <tr>
+                    <td>6</td>
+                    <td class="name">a</td>
+                    <td class="name">Article</td>
+                    <td>20</td>
+                </tr>
+
+                <tr>
+                    <td>7</td>
+                    <td class="name">in</td>
+                    <td class="name">Preposition</td>
+                    <td>23</td>
+                </tr>
+
+                <tr>
+                    <td>8</td>
+                    <td class="name">that</td>
+                    <td class="name">Verb</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td class="name">have</td>
+                    <td class="name">Pronoun</td>
+                    <td>25</td>
+                </tr>
+
+                <tr>
+                    <td>10</td>
+                    <td class="name">I</td>
+                    <td class="name">Pronoun</td>
+                    <td>7</td>
+                </tr>
             </tbody>
         </table>
 
-        <br>
-        Font: <a href="https://en.wikipedia.org/wiki/Most_common_words_in_English" target="_blank" rel="external">Wikipedia</a>
-        <br>
+        <br />
+        Font:
+        <a
+            href="https://en.wikipedia.org/wiki/Most_common_words_in_English"
+            target="_blank"
+            rel="external"
+            >Wikipedia</a
+        >
+        <br />
         <a href="../../module_3/">Back</a>
-
     </body>
 </html>
