--- a/curso_em_vídeo/html_css/module_3/ex-017/index.html
+++ b/curso_em_vídeo/html_css/module_3/ex-017/index.html
@@ -73,5 +73,7 @@
                 </tr>
             </tbody>
         </table>
+        <br />
+        <a href="../../module_3/">Back</a>
     </body>
 </html>
