--- a/curso_em_vídeo/html_css/module_4/ex-001/index.html
+++ b/curso_em_vídeo/html_css/module_4/ex-001/index.html
@@ -3,10 +3,40 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>Document</title>
     </head>
     <body>
         <h1>iframe Test</h1>
-        <p>This is the Android site: <iframe src="https://www.android.com/" frameborder="0"></iframe></p>
+
+        <!--
+            iframe Default Size: 300x150px
+        -->
+
+        <p>
+            This is the Android site:
+            <iframe
+                src="https://www.android.com/"
+                frameborder="0"
+                height="500px"
+                width="500px"
+                scrolling="auto"
+            ></iframe>
+        </p>
+
+        <!--
+            scrolling=""
+
+            - auto
+            - yes
+            - no
+        -->
+
+        <p>
+            This is the ABC site:
+            <iframe src="https://www.abc.com/" frameborder="0">
+                <a href="https://www.abc.com/">Click Here</a>
+            </iframe>
+        </p>
     </body>
 </html>
