--- a/curso_em_vídeo/html_css/module_4/ex-002/index.html
+++ b/curso_em_vídeo/html_css/module_4/ex-002/index.html
@@ -9,13 +9,26 @@
     <body>
         <h1>iframe Test</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptatem, consequuntur quis consectetur error blanditiis velit nihil reiciendis laboriosam odio assumenda ea aut neque, quas quidem earum! Veniam, nam unde?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis
+            voluptatem, consequuntur quis consectetur error blanditiis velit
+            nihil reiciendis laboriosam odio assumenda ea aut neque, quas quidem
+            earum! Veniam, nam unde?
         </p>
 
-        <iframe src="page-001.html" frameborder="0" width="600px" height="200px"></iframe>
+        <iframe
+            src="page-001.html"
+            frameborder="0"
+            width="600px"
+            height="200px"
+        >
+            <p>Unfortunately your browser does not support iframe :(</p>
+        </iframe>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, est officiis cum explicabo neque eligendi, quos, saepe quod laudantium odio non ducimus perspiciatis! Vero, obcaecati. Culpa beatae deserunt ut quibusdam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
+            est officiis cum explicabo neque eligendi, quos, saepe quod
+            laudantium odio non ducimus perspiciatis! Vero, obcaecati. Culpa
+            beatae deserunt ut quibusdam!
         </p>
     </body>
 </html>
