--- a/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/index.html
+++ b/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/index.html
@@ -3,9 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <link rel="stylesheet" href="../ex-005 - Final Project Module/styles/style-1.css">
+        <title>Social Network Project</title>
     </head>
     <body>
-        
+        <main>
+            <section id="smartphone">
+
+            </section>
+            <section id="social-icons">
+
+            </section>
+        </main>
     </body>
 </html>
