--- a/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/index.html
+++ b/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/index.html
@@ -21,7 +21,7 @@
             ></iframe>
 
             <section id="social-icons">
-                <div>
+                <div onclick="location.href='../pages/youtube.html'">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="24"
