--- a/curso_em_vídeo/html_css/module_4/ex-006/form-01.html
+++ b/curso_em_vídeo/html_css/module_4/ex-006/form-01.html
@@ -11,6 +11,22 @@
 
         <!--
             Label is important.
+
+            GET is the default submission method.
+
+
+            GET
+
+            - Non-sensitive data
+            - Limit: 3000 bytes
+            - Shareable
+
+            POST - Data.
+            
+            - Sensitive data
+            - Uploading files
+            - Not shareable
+            - 'No' limit data
         -->
 
         <form action="register.php" autocomplete="off">
